test/bad/wrong-type-binop2.go
package main
import "fmt"

func main() {
  fmt.Print(5 < "6")
}
